# hoangsa-codex

./: .memoryignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.agents/plugins/: marketplace.json
.github/issues/: codex-support-follow-up.md
.github/workflows/: release.yml
crates/hoangsa-cli/: Cargo.toml  README.md
crates/hoangsa-cli/src/: helpers.rs  lib.rs  main.rs
crates/hoangsa-cli/src/cmd/: addon.rs  bootstrap.rs  budget.rs  cache.rs  codex.rs  config.rs  context.rs  ctx.rs  dag.rs  guidance.rs  help.rs  hook.rs  install.rs  media.rs  mod.rs  model.rs  pref.rs  rule.rs  session.rs  state.rs  stats.rs  statusline.rs  trust.rs  ui.rs  validate.rs  verify.rs
crates/hoangsa-cli/tests/: integration_budget.rs  integration_install.rs  integration_pref.rs  plugin_distribution.rs
crates/hoangsa-cli/tests/fixtures/codex-hooks/: CAPTURE_BLOCKED.md  post_tool_use_memory_impact.sample.json  pre_compact_missing_transcript.sample.json  pre_tool_use_apply_patch.sample.json  pre_tool_use_bash.sample.json  stop.sample.json
crates/hoangsa-memory/: Cargo.toml
crates/hoangsa-memory-core/: Cargo.toml
crates/hoangsa-memory-core/src/: io.rs  lib.rs  names.rs  projects.rs
crates/hoangsa-memory-graph/src/: lib.rs
crates/hoangsa-memory-graph/tests/: graph_smoke.rs
crates/hoangsa-memory-mcp/: Cargo.toml  README.md
crates/hoangsa-memory-mcp/src/: lib.rs  main.rs  proto.rs  server.rs  service.rs
crates/hoangsa-memory-mcp/tests/: multi_listener.rs  rpc.rs  socket.rs
crates/hoangsa-memory-parse/src/: language.rs  lib.rs  watch.rs
crates/hoangsa-memory-parse/tests/: events.rs  smoke.rs
crates/hoangsa-memory-policy/: Cargo.toml
crates/hoangsa-memory-policy/src/: cap.rs  manager.rs
crates/hoangsa-memory-policy/tests/: forget_pass.rs
crates/hoangsa-memory-retrieve/: Cargo.toml
crates/hoangsa-memory-retrieve/benches/: recall.rs
crates/hoangsa-memory-retrieve/src/: archive.rs  indexer.rs  lib.rs  retriever.rs
crates/hoangsa-memory-retrieve/tests/: e2e.rs  purge.rs  recall_accuracy.rs  streaming_embed.rs
crates/hoangsa-memory-store/: Cargo.toml
crates/hoangsa-memory-store/benches/: graph_bfs.rs  kv_ops.rs
crates/hoangsa-memory-store/src/: archive.rs  episodes.rs  fts.rs  kv.rs  lib.rs  markdown.rs  vector.rs
crates/hoangsa-memory-store/tests/: smoke.rs
crates/hoangsa-memory/src/: archive_cmd.rs  index_cmd.rs  main.rs  memory_cmd.rs  projects_cmd.rs  query_cmd.rs  resolve.rs
crates/hoangsa-proxy/: Cargo.toml
crates/hoangsa-proxy/src/: doctor.rs  filters.rs  init.rs  prefs.rs  report.rs  rhai_engine.rs
crates/hoangsa-proxy/src/handlers/: cargo.rs  fs.rs  pkg.rs
crates/hoangsa-proxy/tests/: ansi_integration.rs  curl_handler.rs  dashdash_separator.rs  doctor_integration.rs  exec_integration.rs  pipe_skip.rs  prefs_integration.rs  report_format.rs  signal_handler.rs  strict_mode.rs
crates/hoangsa-ui-server/: Cargo.toml
crates/hoangsa-ui-server/src/: assets.rs  auth.rs  browser.rs  config.rs  lib.rs  main.rs  mcp_client.rs  memory.rs  memory_files.rs  patch.rs  port.rs  routes.rs  rules.rs  server.rs  state.rs
crates/hoangsa-ui-server/tests/: integration_http.rs
crates/hoangsa-ui-web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/hoangsa-ui-web/src/: App.tsx  api.ts  index.css
crates/hoangsa-ui-web/src/components/: app-sidebar.tsx  markdown.tsx  project-switcher.tsx  stats-grid.tsx  status-dot.tsx  topbar.tsx
crates/hoangsa-ui-web/src/pages/: AddonsPage.tsx  ConfigPage.tsx  Dashboard.tsx  MemoryPage.tsx  RulesPage.tsx
crates/hoangsa-ui-web/src/pages/memory/: ArchiveTab.tsx  FilesTab.tsx  HealthTab.tsx  RecallTab.tsx  SkillsTab.tsx
plugins/hoangsa-codex/: .mcp.json  README.md
plugins/hoangsa-codex/.codex-plugin/: plugin.json
plugins/hoangsa-codex/skills/hoangsa-brainstorm/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-check/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-command-player/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-cook/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-fix/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-help/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-index/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-init/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-menu/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-prepare/: SKILL.md
plugins/hoangsa-codex/skills/hoangsa-taste/: SKILL.md
plugins/hoangsa-codex/skills/memory-cli/: SKILL.md
plugins/hoangsa-codex/skills/memory-debugging/: SKILL.md
plugins/hoangsa-codex/skills/memory-discipline/: SKILL.md
plugins/hoangsa-codex/skills/memory-exploring/: SKILL.md
plugins/hoangsa-codex/skills/memory-guide/: SKILL.md
plugins/hoangsa-codex/skills/memory-impact-analysis/: SKILL.md
plugins/hoangsa-codex/skills/memory-refactoring/: SKILL.md
plugins/hoangsa-codex/skills/memory-reflect/: SKILL.md
scripts/: install-local.sh  install.sh  uninstall.sh
