[package]
name = "hoangsa-cli"
version = "0.2.4"
edition = "2024"

[lib]
name = "hoangsa_cli"
path = "src/lib.rs"

[features]
default = []
media = ["dep:ab_glyph", "dep:image", "dep:imageproc", "dep:walkdir"]

[dependencies]
hoangsa-memory-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }
glob = "0.3"
regex = "1"
ab_glyph = { version = "0.2", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", optional = true, default-features = false }
walkdir = { version = "2", optional = true }
tiktoken-rs = "0.5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration_budget"
path = "tests/integration_budget.rs"

[[test]]
name = "integration_pref"
path = "tests/integration_pref.rs"
