[package]
name = "hoangsa-memory-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Public API and core types for hoangsa-memory — long-term memory for coding agents."

[dependencies]
async-trait  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
time         = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
