[package]
name = "hoangsa-memory-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) stdio server for hoangsa-memory — plug-and-play for Claude Agent SDK / Claude Code / Cowork."

[[bin]]
name = "hoangsa-memory-mcp"
path = "src/main.rs"

[lib]
name = "hoangsa_memory_mcp"
path = "src/lib.rs"

[dependencies]
hoangsa-memory-core     = { workspace = true }
hoangsa-memory-parse    = { workspace = true }
hoangsa-memory-graph    = { workspace = true }
hoangsa-memory-store    = { workspace = true }
hoangsa-memory-retrieve = { workspace = true }
hoangsa-memory-policy   = { workspace = true }

tokio                = { workspace = true, features = ["io-std", "signal", "net"] }
anyhow               = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
time                 = { workspace = true }
uuid                 = { workspace = true }

blake3               = { workspace = true }
toml                 = { workspace = true }
dashmap              = { workspace = true }
notify               = { workspace = true }

# Global allocator. Conditional so msvc builds skip the crate entirely
# (it doesn't build there); wired up in `src/main.rs`.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile             = { workspace = true }
hoangsa-memory-policy         = { workspace = true }
