[package]
name = "hoangsa-memory-retrieve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hybrid retrieval orchestrator for hoangsa-memory — Mode::Zero and Mode::Full."

[features]
default   = []

[dependencies]
hoangsa-memory-core   = { workspace = true }
hoangsa-memory-parse  = { workspace = true }
hoangsa-memory-store  = { workspace = true }
hoangsa-memory-graph  = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
blake3       = { workspace = true }
serde_json   = { workspace = true }
parking_lot  = { workspace = true }
futures      = { workspace = true }
lru          = "0.16"



[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile    = { workspace = true }
async-trait = { workspace = true }
criterion   = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "recall"
harness = false
