[package]
name = "hoangsa-proxy"
version = "0.2.4"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI output compressor — wraps dev commands and filters their stdout/stderr to save Claude Code tokens"

[[bin]]
name = "hsp"
path = "src/main.rs"

[lib]
name = "hoangsa_proxy"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
# `preserve_order` keeps JSON object key order when re-serialising — critical
# for the curl handler so API responses don't get their key order
# alphabetised when we compact them.
serde_json = { workspace = true, features = ["preserve_order"] }
regex = "1"
rhai = { version = "1.19", features = ["sync"] }
is-terminal = "0.4"
dirs = "5"
libc = "0.2"
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = { workspace = true }
